# federa

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  getting_started.md
examples/mnist_fedavg/: client.py  server.py
federa/: __init__.py
federa/client/: __init__.py  node.py  scheduler.py  trainer.py  websocket.py
federa/communication/: __init__.py  messages.py  protocol.py  websocket.py
federa/coordinator/: __init__.py  aggregator.py  routing.py  server.py  state.py
federa/models/: __init__.py  base.py  pytorch.py  serialization.py
federa/privacy/: __init__.py  accountant.py  clipping.py  gaussian.py  laplace.py
federa/quantization/: __init__.py  compression.py  fp16.py  int8.py  qlora.py
federa/training/: __init__.py  checkpoint.py  fedavg.py  fedprox.py  optimizer.py
federa/utils/: __init__.py  config.py  logging.py  metrics.py
tests/: .dockerignore
tests/examples/: README.md
tests/examples/mnist_fedavg/: model.py  server.py
tests/integration/: test_fedavg_round.py
tests/unit/: test_checkpoint.py  test_fedavg.py  test_messages_protocol.py  test_models.py  test_privacy.py  test_quantization.py
